<resources>
    <string name="app_name">Swift Wallet</string>
    <string name="webclient_id">300434541324-4enk0efv10ktjhglqniasj135qjoht2p.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="logged_in_as">Welcome :</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="email">Email</string>
    <string name="back">Back</string>

    <!-- LOGIN & REGISTER-->
    <string name="appTitle">SwiftWallet</string>
    <string name="appLogoDescription">SwiftWallet Logo</string>
    <string name="emailTv">Email</string>
    <string name="passwordTv">Password</string>
    <string name="loginBtnText">Login</string>
    <string name="forgotPasswordTv">Forgot Password?</string>
    <string name="registerTv">Register</string>
    <string name="usernameTv">Username</string>
    <string name="useOfflineTv">Use Offline</string>
    <string name="registerTitle">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="confirmPasswordTv">Confirm Password</string>

    <!-- CRYPTOVALUES -->
    <string name="search_crypto_name">Search Crypto Name</string>
    <string name="symbol">Symbol</string>
    <string name="decimalFormatCurrencyValue">#.##</string>
    <string name="coinMarketCapKey">X-CMC_PRO_API_KEY</string>
    <string name="coinMarketCapValue">db2a8973-af74-4b0f-bf14-7f6c84b648d0</string>
    <string name="coinMarketCapLatestURL">https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest</string>
    <string name="value">Value</string>
    <string name="go_to_crypto_values">Go to Crypto Values</string>
    <string-array name="show_USDT_only">
        <item>Show USDT Only</item>
        <item>Show All</item>
    </string-array>

    <!-- CRYPTOINTERVALS -->
    <string-array name="intervals_array">
        <item>Change Duration of a Candle</item>
        <item>1m</item>
        <item>3m</item>
        <item>5m</item>
        <item>15m</item>
        <item>30m</item>
        <item>1h</item>
        <item>2h</item>
        <item>4h</item>
        <item>6h</item>
        <item>8h</item>
        <item>12h</item>
        <item>1d</item>
        <item>3d</item>
        <item>1w</item>
        <item>1M</item>
    </string-array>

    <!-- MAINCRYPTOCURRENCIES -->
    <string-array name="main_crypto_names">
        <item>Change Currency</item>
        <item>BTC</item>
        <item>ETH</item>
        <item>BNB</item>
        <item>XRP</item>
        <item>ADA</item>
        <item>SOL</item>
        <item>DOGE</item>
        <item>DOT</item>
        <item>AVAX</item>
        <item>TRX</item>
        <item>DAI</item>
        <item>SHIB</item>
        <item>LEO</item>
        <item>MATIC</item>
        <item>NEAR</item>
    </string-array>

    <!-- TRANSACTION HISTORY -->
    <string name="go_to_transaction_history">Go to transaction history</string>
    <string name="transactionHistoryProducerExtraKey">TRANSAC_HIST_GEN_KEY</string>

    <!-- RESET FIELDS -->
    <string name="reset_your_email">Reset your email:</string>
    <string name="reset">RESET</string>
    <string name="send_reset">Send reset link</string>
    <string name="forgot_password">Reset your password</string>


    <!-- LOGIN FIELDS -->
    <string name="logout">LOGOUT</string>


    <!-- QR -->
    <string name="qr_generate_button">Generate a QR-CODE</string>
    <string name="qr_scan_button">Tap to Scan Stuffff</string>
    <string name="goto_qr">Go to qr scanning</string>
    <string name="default_qr_result_text">Scan result</string>

    <!-- WALLET -->
    <string name="home_title">Your wallets</string>
    <string name="balance_label_text">Balance</string>
    <string name="address_label_text">Address</string>
    <string name="wallet_info_send_with">Send with this wallet</string>
    <string name="ether_logo_description">The ether currency logo</string>
    <string name="random_example_address">0x000000000000000000000000000000000000dead</string>
    <string name="random_example_address_short">0x0000...dead</string>
    <string name="random_example_balance">12.214</string>
    <string name="no_seed">Your seed is not setup</string>
    <string name="setup_seed">Setup your seed</string>
    <string name="seed_info">A seed is a secret key made of random words for you to keep your wallets, you need to keep it in a secret place.</string>
    <string name="generate_seed">Generate a seed</string>
    <string name="save_seed">Save this seed</string>
    <string name="createAddressBtnDescription">A plus in a circle :)</string>
    <string name="first_wallet_not_setup">Click here to create your first wallet !</string>
    <string name="import_wallet">Import wallet</string>
    <string name="private_key">Private key</string>
    <string name="total_worth">Total Worth</string>
    <string name="account_label">Account</string>

    <!-- SEND -->
    <string name="send_from">From</string>
    <string name="send_to">To</string>
    <string name="send_amount">Amount</string>
    <string name="send_action">Send</string>
    <string name="send_balance0">0.00</string>

    <!-- NAVIGATION -->
    <string name="nav_message">CONVERSATIONS</string>
    <string name="nav_profile">PROFILE</string>
    <string name="nav_wallets">WALLETS</string>
    <string name="nav_stats">STATS</string>
    <string name="nav_send">SEND</string>

    <!-- CONTACTS -->
    <string name="addContactTitle">New Contact</string>
    <string name="previewTv">Preview</string>
    <string name="confirmTv">Confirm</string>
    <string name="add_via_QR">Add via QR code</string>
    <string name="addContactOr">Or Search Friend</string>
    <string name="contacts">Contacts</string>

    <string name="title_activity_crypto_graph">CryptoGraphActivity</string>

    <string name="settings_title">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_switch_preference">Switch Preference</string>

</resources>