<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stats_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdp.swiftwallet.presentation.main.fragments.StatsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nav_stats"
        android:textSize="@dimen/nav_title"
        android:layout_margin="@dimen/nav_title_margin"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cryptovalues_button"
            android:text="@string/go_to_crypto_values"
            android:layout_gravity="center">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_history_button"
            android:text="@string/go_to_transaction_history"
            />
    </LinearLayout>

</FrameLayout>