<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/purple_500"
    android:layout_height="wrap_content"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:id="@+id/idRelativeLayoutCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/idTextViewSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_toStartOf="@id/idTextViewValue"
            android:padding="3dp"
            android:text="@string/symbol"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTextViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/idTextViewSymbol"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:padding="3dp"
            android:text="@string/name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/idTextViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="3dp"
            android:padding="3dp"
            android:text="@string/value"
            android:textColor="@color/black" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>