<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payment_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.sdp.swiftwallet.presentation.main.fragments.PaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/info_box_padding">

        <!-- TOKEN -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/info_box_corner"
            android:layout_margin="@dimen/info_box_margin">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/info_box_padding"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Token" />
                    <Spinner
                        android:id="@+id/send_token_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ETH"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ether" />
                </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- FROM -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/info_box_corner"
            android:layout_margin="@dimen/info_box_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/info_box_padding"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_from"
                        android:textAlignment="center"/>
                    <Spinner
                        android:id="@+id/send_from_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_label_text"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/send_from_address"
                    android:text="@string/random_example_address"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/balance_label_text"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_example_balance"
                    android:id="@+id/send_from_balance"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_downward_24"/>

        <!-- AMOUNT -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/info_box_corner"
            android:layout_margin="@dimen/info_box_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="@dimen/info_box_padding">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_amount"/>
                    <EditText
                        android:id="@+id/send_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send_balance0"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

                <SeekBar
                    android:id="@+id/send_amount_seekBar"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/info_box_margin"
                    android:layout_weight="1"
                    android:thumbTint="@color/design_default_color_primary"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_downward_24"/>

        <!-- TO -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/info_box_corner"
            android:layout_margin="@dimen/info_box_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/info_box_padding"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_to"
                        android:textAlignment="center"/>
                    <Spinner
                        android:id="@+id/send_to_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/send_qr_scan"
                        android:src="@drawable/ic_baseline_qr_code_scanner_24"
                        app:tint="#000000" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_label_text"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/send_to_address"
                    android:text="@string/random_example_address"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/send_action"
            android:id="@+id/send_button"
            android:layout_margin="@dimen/info_box_margin">
        </Button>
    </LinearLayout>

</FrameLayout>