<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.sdp.swiftwallet.presentation.main.fragments.HomeFragment">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_wallets"
        android:textSize="@dimen/nav_title"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/home_nested_frag_container"
        android:name="com.sdp.swiftwallet.presentation.wallet.fragments.WalletItemFragment"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/home_title"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/create_address_button"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/seed_not_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_seed"
            android:textSize="@dimen/wallet_important"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/seed_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_seed"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <ImageButton
        android:id="@+id/create_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/zxing_transparent"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/createAdressBtnDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>